<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clLogin"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivLoginLogo"
        android:contentDescription="@string/image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/llGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:elevation="@dimen/four_dp"
        android:padding="@dimen/four_dp"
        android:background="@drawable/bg_google_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLoginLogo"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="@dimen/twenty_dp"
            android:layout_height="@dimen/twenty_dp"
            android:id="@+id/ivGoogle"
            android:layout_marginEnd="@dimen/four_dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:src="@drawable/google_logo"
            android:contentDescription="@string/image_google"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGoogle"
            android:text="@string/google"
            android:textSize="@dimen/twenty_sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/llLoginUserName"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/four_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLoginUsername"
            android:hint="@string/username"
            android:textColorHint="@color/teal_200"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/teal_700"
            android:inputType="text"
            android:layout_marginBottom="8dp"
            android:importantForAutofill="no" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoginUsername"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>